feat: update swagger
