# api/handlers/gitlab.go
@@ -24,6 +24,17 @@ func NewGitlabHandler(cfg *config.HTTPAPI, tm tm.ITaskManager) *GitlabHandler {
 	}
 }
 
+// UpdateLastCommitInfo updates the last commit info of a task
+// @Description Update last commit info, in custom field or creating a comment
+// @Accept      json
+// @Param       X-Gitlab-Event header   string                 true "Gitlab event"
+// @Param       X-Gitlab-Token header   string                 true "Gitlab token"
+// @Param       body           body     gitlab.PushRequestHook true "Gitlab request body"
+// @Success     200            {object} api.Response
+// @Failure     400            {object} api.Response
+// @Failure     401            {object} api.Response
+// @Failure     500            {object} api.Response
+// @Router      /api/v1/asana/push [post]
 func (h *GitlabHandler) UpdateLastCommitInfo(c *gin.Context) {
 	if c.Request.Header.Get("X-Gitlab-Event") != gitlab.PushEvent {
 		c.AbortWithStatus(http.StatusBadRequest)
